Question A algorithm attempt

--- a/Phase 3/.vscode/launch.json
+++ b/Phase 3/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "QuestionA",
+            "request": "launch",
+            "mainClass": "QuestionA",
+            "projectName": "Phase 3_6840df19"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
