--- a/Phase 3/.vscode/launch.json
+++ b/Phase 3/.vscode/launch.json
@@ -16,7 +16,8 @@
             "name": "JavaFX",
             "request": "launch",
             "mainClass": "JavaFX",
-            "projectName": "Phase 3_6840df19"
+            "projectName": "Phase 3_6840df19",
+            "vmArgs": "--module-path /Users/emachagas/Documents/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
