--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "c:\\javafx-sdk-21.0.1\\lib\\javafx.swing.jar",
         "c:\\javafx-sdk-21.0.1\\lib\\javafx.web.jar",
         "c:\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar"
-    ]
+    ],
+    "java.debug.settings.onBuildFailureProceed": true
 }
