--- a/Phase 3/.vscode/launch.json
+++ b/Phase 3/.vscode/launch.json
@@ -6,6 +6,14 @@
     "configurations": [
         {
             "type": "java",
+            "name": "JavaFXDancingMap",
+            "request": "launch",
+            "mainClass": "JavaFXDancingMap",
+            "projectName": "Phase 3_6840df19",
+            "vmArgs": "--module-path /Users/emachagas/Documents/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
             "name": "GreedyAlgorithm",
             "request": "launch",
             "mainClass": "GreedyAlgorithm",
