--- a/Phase 3/.vscode/launch.json
+++ b/Phase 3/.vscode/launch.json
@@ -6,17 +6,42 @@
     "configurations": [
         {
             "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "Phase 3_97d41e9e"
+        },
+        {
+            "type": "java",
+            "name": "JavaFX",
+            "request": "launch",
+            "mainClass": "QuestionC.JavaFX",
+            "projectName": "Phase 3_97d41e9e",
+            "vmArgs": "--module-path /Users/emachagas/Documents/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "JavaFX",
+            "request": "launch",
+            "mainClass": "JavaFX",
+            "projectName": "Phase 3_97d41e9e",
+            "vmArgs": "--module-path /Users/emachagas/Documents/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
             "name": "GreedyAlgorithm",
             "request": "launch",
             "mainClass": "GreedyAlgorithm",
-            "projectName": "Phase 3_6840df19"
+            "projectName": "Phase 3_6840df19",
+            "vmArgs": "--module-path /Users/emachagas/Documents/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
             "name": "App",
             "request": "launch",
             "mainClass": "App",
-            "projectName": "Phase 3_6840df19"
+            "projectName": "Phase 3_6840df19",
+            "vmArgs": "--module-path /Users/emachagas/Documents/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
@@ -31,7 +56,8 @@
             "name": "QuestionA",
             "request": "launch",
             "mainClass": "QuestionA",
-            "projectName": "Phase 3_6840df19"
+            "projectName": "Phase 3_6840df19",
+            "vmArgs": "--module-path /Users/emachagas/Documents/javafx-sdk-21.0.1/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
