--- a/Phase 3/src/Question C/src/.vscode/settings.json
+++ b/Phase 3/src/Question C/src/.vscode/settings.json
@@ -8,6 +8,7 @@
         "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.media.jar",
         "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.swing.jar",
         "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.web.jar",
-        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar"
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar",
+        "/Users/emachagas/Documents/javafx-sdk-21.0.1/lib/**/*.jar"
     ]
 }
