--- a/Phase 3/src/Phase3GUI/.vscode/settings.json
+++ b/Phase 3/src/Phase3GUI/.vscode/settings.json
@@ -8,7 +8,14 @@
         "/Users/emachagas/Documents/javafx-sdk-21.0.1/lib/javafx.graphics.jar",
         "/Users/emachagas/Documents/javafx-sdk-21.0.1/lib/javafx.media.jar",
         "/Users/emachagas/Documents/javafx-sdk-21.0.1/lib/javafx.swing.jar",
-        "/Users/emachagas/Documents/javafx-sdk-21.0.1/lib/javafx.web.jar"
-
+        "/Users/emachagas/Documents/javafx-sdk-21.0.1/lib/javafx.web.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.base.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.controls.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.fxml.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.graphics.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.media.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.swing.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx.web.jar",
+        "c:\\Users\\mikah\\OneDrive\\Bureaublad\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar"
     ]
 }
