--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "c:\\javafx-sdk-21.0.1\\lib\\javafx.media.jar",
         "c:\\javafx-sdk-21.0.1\\lib\\javafx.swing.jar",
         "c:\\javafx-sdk-21.0.1\\lib\\javafx.web.jar",
-        "c:\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar"
+        "c:\\javafx-sdk-21.0.1\\lib\\javafx-swt.jar",
+        "/Users/emachagas/Documents/javafx-sdk-21.0.1/lib/**/*.jar"
     ],
     "java.debug.settings.onBuildFailureProceed": true
 }
